--- a/static/index.css
+++ b/static/index.css
@@ -20,3 +20,11 @@ html, body {
     width: 1rem;
     height: 1rem;
 }
+
+.data-marker1 {
+    background-color: #ee42f4;
+    border-radius: 50%;
+    box-shadow: 0 0 2px rgba(0,0,0,0.25);
+    width: 1rem;
+    height: 1rem;
+}
